# SimpleAuthJWT

./: Dockerfile  LICENSE  README.md
account-service/: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
account-service/cmake/: project-settings.cmake
account-service/cmake/hooks/: format.cmake  run.cmake
account-service/db/: .gitignore  Dockerfile  Makefile  README.md
account-service/db/scripts/: init.sql
account-service/db/scripts/extension/: uuid-ossp.sql
account-service/db/scripts/seed/: role.sql
account-service/db/scripts/table/: account.sql  granted_permission.sql  permission.sql  role.sql
account-service/src/: CMakeLists.txt  main.cc
account-service/src/controllers/: AccountCtrl.cc  AccountCtrl.h  CMakeLists.txt
account-service/src/filters/: CMakeLists.txt  JWTFilter.cc  JWTFilter.h  SignInFilter.cc  SignInFilter.h  SignUpFilter.cc  SignUpFilter.h
account-service/src/models/: Account.cc  Account.h  CMakeLists.txt  GrantedPermission.cc  GrantedPermission.h  Permission.cc  Permission.h  Role.cc  Role.h
account-service/src/models/config/: model.json
account-service/src/plugins/: CMakeLists.txt  JWTPlugin.cc  JWTPlugin.h  SMTPMailPlugin.cc  SMTPMailPlugin.h
account-service/tests/: CMakeLists.txt
account-service/utils/: ServiceCtrl.h  utils.h
auth-service/: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
auth-service/cmake/: project-settings.cmake  static-analyzers.cmake
auth-service/cmake/hooks/: docker-build.cmake  docker-push.cmake  lint.cmake
auth-service/db/: .dockerignore  .gitignore  .pre-commit-config.yaml  .sqlfluff  Makefile  README.md
auth-service/db/scripts/: init.sql
auth-service/db/scripts/seed/: .sqlfluff  auth.sql
auth-service/db/scripts/table/: auth.sql  oauthtwo.sql  provider.sql
auth-service/src/: CMakeLists.txt  main.cc
auth-service/src/controllers/: AuthCtrl.cc  AuthCtrl.h  CMakeLists.txt
auth-service/src/filters/: CMakeLists.txt  ConfirmOtpFilter.cc  ConfirmOtpFilter.h  JWTFilter.cc  JWTFilter.h  SignInFilter.cc  SignInFilter.h  SignUpFilter.cc  SignUpFilter.h
auth-service/src/models/: Account.cc  Account.h  Auth.cc  Auth.h  Oauthtwo.cc  Oauthtwo.h  Provider.cc  Provider.h
auth-service/src/models/config/: model.json
auth-service/src/plugins/: JWTPlugin.cc  JWTPlugin.h  SMTPMailPlugin.cc  SMTPMailPlugin.h
auth-service/tests/: test_main.cc
client/: .env.production  .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierrc.json  Dockerfile  jest.config.js  jest.setup.ts  next.config.js  package.json  tsconfig.json
client/src/HttpClient/: index.ts
client/src/app/: layout.tsx  loading.tsx  page.tsx
client/src/app/sign-in/: page.tsx
client/src/components/InputFormAuth/: index.ts  inputFormAuth.props.ts
client/src/components/OtpInput/: index.ts  otp.component.tsx  otp.props.ts
client/src/components/SignInForm/: signInForm.component.tsx  signInForm.fields.ts  signInForm.props.ts
client/src/components/SignUpForm/: signUpForm.component.tsx  (+2 more)
client/src/style/: globals.css
k8s/: .gitignore  .gitignore.swp  Chart.yaml  README.md  ingress-forward.sh  values.yaml
k8s/charts/account/: Chart.yaml  values.yaml
k8s/charts/auth/: Chart.yaml  values.yaml
k8s/charts/gateway/: values.yaml
k8s/templates/: NOTES.txt  _helpers.tpl
(+37 files in other folders)
